# motion-project-2021

./: .gitignore  CMakeLists.txt  README.md
device/src/: constants.cpp  constants.hpp  main.cpp  motion.cpp  motion.hpp  timer.hpp  transfer.cpp  transfer.hpp  vector2.hpp  vector3.hpp
lib/bluetooth/: .gitignore  CMakeLists.txt
lib/bluetooth/test/: main.cpp
lib/serial/: CMakeLists.txt
lib/serial/include/: SerialPort.hpp
lib/serial/src/linux/: SerialPort.cpp
lib/serial/src/windows/: SerialPort.cpp
res/configs/: runtime_config.txt
res/shaders/: fs_100_skybox.shader  fs_330_cubeMap.shader  fs_330_skybox.shader  vs_100_skybox.shader  vs_330_cubeMap.shader  vs_330_skybox.shader
res/shaders/postprocessor/: fs_330_postprocess.shader  vs_330_postprocess.shader
src/: Anim.cpp  Anim.hpp  CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Container/: CMakeLists.txt  coreHashMap.hpp  coreLinkedList.hpp  coreParameterList.hpp  corePolyMap.hpp
src/Core/Types/: BasicTypes.hpp  CMakeLists.txt  NumberTypes.hpp
src/Core/Unused/: globalHeaps.cpp  globalHeaps.hpp
src/Core/Utils/: CMakeLists.txt  RandomValue.cpp  RandomValue.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorMath.hpp
src/Engine/: CMakeLists.txt
src/Engine/Actor/: CMakeLists.txt  actActorList.cpp  actActorList.hpp  actBaseActor.cpp  actBaseActor.hpp  actBaseProcess.cpp  actBaseProcess.hpp  actModelActor.cpp  actModelProcess.cpp  actModelProcess.hpp  actProcess.cpp  actProcess.hpp  actRootActor.cpp  actRootActor.hpp
src/Engine/Constants/: CMakeLists.txt  actConstants.hpp  gfxConstants.hpp  ioConstants.hpp
src/Engine/Graphics/: CMakeLists.txt  gfxPostProcessor.cpp  gfxPostProcessor.hpp  (+2 more)
src/Game/: CMakeLists.txt
(+69 files in other folders)
